non-msrv-tests/tests/ui/default.stderr
error: unknown option
 --> tests/ui/default.rs:6:42
  |
6 | struct DefaultOnStruct<T>(#[derive_where(default)] PhantomData<T>);
  |                                          ^^^^^^^

error: `default` is only supported if `Default` is being implemented
  --> tests/ui/default.rs:10:17
   |
10 |     #[derive_where(default)]
   |                    ^^^^^^^

error: required `default` option on a variant if `Default` is being implemented
  --> tests/ui/default.rs:14:1
   |
14 | #[derive_where(Default)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: multiple `default` options in enum
  --> tests/ui/default.rs:23:17
   |
23 |     #[derive_where(default)]
   |                    ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:29:26
   |
29 |     #[derive_where(default, default)]
   |                             ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:36:17
   |
36 |     #[derive_where(default)]
   |                    ^^^^^^^
